Fixed letter spacing in title, Removed well when no summary, upgraded version number

--- a/styles.css
+++ b/styles.css
@@ -106,5 +106,5 @@
 .glendon-course-title {
     
     font-size: 40px;
-    letter-spacing: 4px;
+    /*letter-spacing: 1px;*/
 } 
